[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voxface"
version = "2025.5.19"
description = "Fast MRI face voxelator"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8, <4"
authors = [
    { name = "Julian Michael Tyszka", email = "jmt@caltech.edu" },
]
keywords = [
    "MRI",
    "Nifti",
    "deface",
    "deidentify",
    "neuroimaging",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy",
    "nibabel",
    "antspyx",
    "scipy",
]

[project.scripts]
voxface = "voxface.__main__:main"

[project.urls]
"Bug Reports" = "https://github.com/jmtyszka/voxface/issues"
Funding = "http://conte.caltech.edu/"
Homepage = "https://github.com/jmtyszka/voxface"
Source = "https://github.com/jmtyszka/voxface/"

[tool.hatch.version]
path = "voxface/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/voxface",
]
